--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,6 @@
 #mammoth
 #python-docx
 #openai
-#pycryptodome
 #dotenv
 
 azure-functions
@@ -16,3 +15,4 @@ mammoth
 beautifulsoup4
 python-docx
 python-dotenv
+pycryptodome
